# git-gen

./: .gitignore  Cargo.toml  GITGEN.md  build.rs  commitgen.toml  justfile
.github/workflows/: ci.yaml
src/: args.rs  config.rs  context.rs  error.rs  git.rs  main.rs  manifest.rs
src/prompt/: INSTRUCTIONS.md  mod.rs
src/prompts/: gemini.md  mod.rs
src/providers/: gemini.rs  mod.rs
