[package]
name = "git-commitgen"
version = "0.1.0"
authors = ["pyk <gm@pyk.sh>"]
edition = "2024"
description = "A git subcommand for writing better commits"
documentation = "https://docs.rs/git-commitgen"
homepage = "https://github.com/pyk/git-commitgen"
repository = "https://github.com/pyk/git-commitgen"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }  # Command-line args parser
envfmt = "0.1"  # Variable expands
rand = "0.9"  # For jittering http request
serde = { version = "1", features = ["derive"] }  # Handle JSON and TOML
toml = "0.9"  # TOML parsing
ureq = { version = "3", features = ["json"] }  # Send request

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }  # Command-line args parser
clap_mangen = { version = "0.2" }  # Generate man page

